--- a/boutique/medium/digital-numerique/index.html
+++ b/boutique/medium/digital-numerique/index.html
@@ -54,15 +54,20 @@
   <section>
     <article>
 
-      <ul class="products columns-4">
+      <ul class="products polyptych">
         <li class="product type-product has-post-thumbnail">
+
           <a href="last-of-the-big-tuskers/">
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; Isilo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
-            </div></a>
+
+            </div>
+          </a>
+
           <a href="last-of-the-big-tuskers/"><h5 class="woo-title">Magnificent Seven</h5></a>
           <h5 class="woo-description">Collection of<font class="fr">&nbsp;&#92;&nbsp;de</font> 7</h5>
           <h5 class="woo-tag"><em>Last of the Big Tuskers</em> (2018)</h5>
+
         </li>
 
         <br class="clear">
