--- a/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
@@ -36,15 +36,16 @@
   <header>
 
     <div class="quote text-center">
-      <h1 class="title"><a href="../../../" title="Animat Habitat boutique."><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></a></h1>
-      <h3><a href="../" title="Animat Habitat boutique. Digital editions. &ndash;&nbsp;&Eacute;ditions num&eacute;riques."><font class="overscore">Digital Editions</font></a><font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></h3>
+      <h1>Magnificent Seven</h1>
+      <h3>Digital Editions<font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font>, 2018</h3>
+
     </div>
 
   </header>
 
   <section id="preview">
 
-    <div class="desktop-feature">
+    <div class="clear desktop-feature">
 
       <div class="ptych-center" id="preview-isilo">
         <a onclick="preview_isilo();"><img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" /></a>
@@ -94,9 +95,8 @@
         <div class="clear ptych-center product-summary">
 
           <div>
-            <h2 class="title">Magnificent Seven</h2>
-            <h5 class="woo-tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em>Last of the Big Tuskers</em>.</h5>
-            <h5 class="author">Digital painting by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Peinture num&eacute;rique par Dane Aleksander.</font></h5>
+            <h5 class="tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em class="overscore">Last of the Big Tuskers</em>.</h5>
+            <p>Digital paintings by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Peinture num&eacute;rique par Dane Aleksander.</font></p>
 
             <p class="linebreak">The complete collection of digital paintings painted in the making of <em>Last of the Big Tuskers</em> (documentary film, 2018). The collection includes a range of resolutions.<font class="fr">&nbsp;&#92;&nbsp;La collection compl&egrave;te de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <em>Last of the Big Tuskers</em>. La collection comprend une gamme de r&eacute;solutions.</font></p>
 
@@ -105,15 +105,16 @@
 
           </div>
 
-          <div class="gutter-tobo diptych">
+          <div class="clear diptych">
 
-            <div class="gutter-side">
-              <h5>Digital Editions<font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></h5>
+            <div class="clear-bottom">
+              <h5><font class="overscore">Digital Editions</font><font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></h5>
               <p>Dimension: 3840&nbsp;&times;&nbsp;2160 px</p>
               <div class="small">
                 <p>All included format collections:<font class="fr">&nbsp;&#92;&nbsp;Toutes les collections de formats inclus&nbsp;:</font></p>
                 <p>Ultra HD, iPad/iPhone.</p>
               </div>
+              <p>File Format:<font class="fr">&nbsp;&#92;&nbsp;Format de fichier&nbsp;:</font> JPG</p>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">7</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">7</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0110 0111</font></p>
               <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2018</p>
@@ -157,10 +158,10 @@
         <div class="clear ptych-right product-stock">
 
           <div>
-            <!-- <h4 class="in-stock"><font class="thin">On drive!<font class="fr">&nbsp;&#92;&nbsp;Sur disque.</font></font></h4> -->
-            <h5 class="stock woo-article">Digital download available for purchase with PayPal.<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement num&eacute;rique disponible &agrave; l'achat avec PayPal.</font></h5>
+            <h4 class="in-stock">Magnificent Seven<font class="thin"> &ndash; Download<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement</font></font></h4>
+            <p class="stock">Digital download available for purchase with PayPal.<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement num&eacute;rique disponible &agrave; l'achat avec PayPal.</font></p>
 
-            <h5 class="woo-article-title"><font class="title">Magnificent Seven</font> <font class="small">Collection of<font class="fr">&nbsp;&#92;&nbsp;de</font> 7</font></font></h5>
+            <h5 class="woo-article-title"><font class="overscore">Digital</font><font class="fr">&nbsp;&#92;&nbsp;Copies num&eacute;riques</font> &nbsp; <font class="small">Collection of<font class="fr">&nbsp;&#92;&nbsp;de</font> 7</font></font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -191,10 +192,10 @@
   </div>
 
   <footer class="single">
-    <!-- <div class="quote">
-      <p class="small"><sup>1</sup> Dimension listed is the full resolution of the digital publication. All additional resolutions included.<font class="fr">&nbsp;&#92;&nbsp;La dimension indiqu&eacute;e est la pleine r&eacute;solution de la publication num&eacute;rique. Toutes les r&eacute;solutions suppl&eacute;mentaire incluses.</font></p>
+    <div class="quote">
+      <!-- <p class="small"><sup>1</sup> Dimension listed is the full resolution of the digital publication. All additional resolutions included.<font class="fr">&nbsp;&#92;&nbsp;La dimension indiqu&eacute;e est la pleine r&eacute;solution de la publication num&eacute;rique. Toutes les r&eacute;solutions suppl&eacute;mentaire incluses.</font></p> -->
 
-    </div> -->
+    </div>
 
   </footer>
 
