--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -32,7 +32,6 @@
   </nav>
 
   <header>
-
     <div class="quote text-center">
       <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></a></h1>
       <h3>Gicl&eacute;e Prints<font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font></h3>
@@ -43,7 +42,6 @@
 
   <section class="single">
     <article>
-
       <div class="term-description">
         <p>Limited edition archival pigment prints are numbered and are signed by Dane Aleksander. Open edition archival pigment prints are not numbered and are not signed. Fifty (50) per cent of the purchase price of each gicl&eacute;e edition is directed to wildlife conservation projects partnered with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Tirages pigmentaires d'archives en &eacute;dition limit&eacute;e sont num&eacute;rot&eacute;s et sont sign&eacute;s par Dane Aleksander. Tirages pigmentaires d'archives en &eacute;dition ouverte ne sont pas num&eacute;rot&eacute;s et ne sont pas sign&eacute;s. Cinquante pour cent du prix d'achat de chaque &eacute;dition gicl&eacute;e est affect&eacute; &agrave; des projets de conservation de la nature en partenariat avec des sc&egrave;nes chez Animat Habitat.</font></p>
       </div>
@@ -54,15 +52,20 @@
   <section>
     <article>
 
-      <ul class="products columns-4">
+      <ul class="products polyptych">
         <li class="product type-product post-1510 has-post-thumbnail">
+
           <a href="isilo/">
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; Isilo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
-            </div></a>
+
+            </div>
+          </a>
+
           <a href="isilo/"><h5 class="woo-title">Isilo</h5></a>
           <h5 class="woo-description">Tembe Elephant Park, South Africa</h5>
           <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
+
         </li>
 
         <!-- <li class="product type-product post-1505 has-post-thumbnail">
@@ -96,36 +99,48 @@
         </li> -->
 
         <li class="product type-product post-1506 has-post-thumbnail">
+
           <a href="satao/">
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; Satao [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" />
-            </div></a>
+
+            </div>
+          </a>
+
           <a href="satao/"><h5 class="woo-title">Satao</h5></a>
           <h5 class="woo-description">Tsavo East National Park, Kenya</h5>
           <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
-          </a>
+
         </li>
 
         <li class="product type-product post-1509 has-post-thumbnail">
+
           <a href="tim/">
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; Tim [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.300-180.jpg" />
-            </div></a>
+
+            </div>
+          </a>
+
           <a href="tim/"><h5 class="woo-title">Tim</h5></a>
           <h5 class="woo-description">Amboseli National Park, Kenya</h5>
           <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
-          </a>
+
         </li>
 
         <li class="product type-product post-1497 has-post-thumbnail">
+
           <a href="craig/">
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; Craig [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.300-180.jpg" />
-            </div></a>
+
+            </div>
+          </a>
+
           <a href="craig/"><h5 class="woo-title">Craig</h5></a>
           <h5 class="woo-description">Amboseli National Park, Kenya</h5>
           <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Paper and Matte">1</a>]</sup></h5>
-          </a>
+
         </li>
 
         <br class="clear">
