--- a/boutique/medium/giclee/satao/index.html
+++ b/boutique/medium/giclee/satao/index.html
@@ -36,8 +36,9 @@
   <header>
 
     <div class="quote text-center">
-      <h1 class="title"><a href="../../../" title="Animat Habitat boutique."><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></a></h1>
-      <h3><a href="../" title="Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es."><font class="overscore">Gicl&eacute;e Prints</font></a><font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font></h3>
+      <h1>Satao</h1>
+      <h3>Gicl&eacute;e, 2018</h5>
+
     </div>
 
   </header>
@@ -60,21 +61,22 @@
         <div class="clear ptych-center product-summary">
 
           <div>
-            <h2 class="title">Satao</h2>
-            <h5 class="woo-tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em>Last of the Big Tuskers</em>.</h5>
-            <h5 class="author">Digital painting by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Peinture num&eacute;rique par Dane Aleksander.</font></h5>
+            <h5 class="tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em class="overscore">Last of the Big Tuskers</em>.</h5>
+            <p>Archival pigment print on acid-free archival paper.<font class="fr">&nbsp;&#92;&nbsp;Tirage pigmentaire d'archivage sur papier d'archivage sans acide.</font></p>
+            <p>Digital painting by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Peinture num&eacute;rique par Dane Aleksander.</font></p>
+            <p>Created in<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au</font> Canada.</p>
 
             <p class="linebreak">&ldquo;Satao&rdquo; is one of a collection of digital paintings painted in the making of <em>Last of the Big Tuskers</em> (documentary film, 2018). This digital painting is printed in limited edition as an archival pigment print on acid-free archival paper, and printed with a half-inch unprinted matte to allow for safe handling as well as for framing options. The archival pigment prints are available in two sizes.<font class="fr">&nbsp;&#92;&nbsp;&laquo;&nbsp;Satao&nbsp;&raquo; fait partie d'une collection de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <em>Last of the Big Tuskers</em>. Cette peinture num&eacute;rique est imprim&eacute; en &eacute;dition limit&eacute;e en tant que tirages pigmentaires d'archives sur papier d'archivage sans acide, et c'est imprim&eacute; avec une mate de demi-pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options de cadrage. Les tirages pigmentaires d'archives sont disponibles en deux tailles.</font></p>
           </div>
 
-          <div class="gutter-tobo diptych">
+          <div class="clear diptych">
 
-            <div class="gutter-side">
-              <h5>Limited Edition Gicl&eacute;e<font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-              <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+            <div class="clear-bottom">
+              <h5><font class="overscore">Limited Edition Gicl&eacute;e</font><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+              <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               <div class="small">
                 <p>Print area within matte:<font class="fr">&nbsp;&#92;&nbsp;Zone d'impression dans le cache&nbsp;:</font></p>
-                <p>11&nbsp;&times;&nbsp;7 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+                <p>11&nbsp;&times;&nbsp;7 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               </div>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">100</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">125</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0115 1111</font></p>
@@ -82,12 +84,12 @@
 
             </div>
 
-            <div class="gutter-side">
-              <h5>Limited Edition Gicl&eacute;e<font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-              <p>Dimension: 18&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+            <div class="clear-bottom">
+              <h5><font class="overscore">Limited Edition Gicl&eacute;e</font><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+              <p>Dimension: 18&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               <div class="small">
                 <p>Print area within matte:<font class="fr">&nbsp;&#92;&nbsp;Zone d'impression dans le cache&nbsp;:</font></p>
-                <p>17&nbsp;&times;&nbsp;11 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+                <p>17&nbsp;&times;&nbsp;11 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               </div>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">200</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">200</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0115 1121</font></p>
@@ -113,11 +115,11 @@
 
         <div class="clear ptych-right product-stock">
 
-          <div>
-            <h4 class="in-stock"><font class="thin">In print!<font class="fr">&nbsp;&#92;&nbsp;En imprimerie !</font></font></h4>
-            <h5 class="stock woo-article">Two sizes available for purchase with PayPal or with Debit or Credit Card.<font class="fr">&nbsp;&#92;&nbsp;Deux tailles disponibles &agrave; l'achat avec PayPal ou par carte de d&eacute;bit ou de cr&eacute;dit.</font></h5>
+          <div class="clear-bottom">
+            <h4 class="in-stock">Satao<font class="thin"> &ndash; In print!<font class="fr">&nbsp;&#92;&nbsp;En imprimerie !</font></font></h4>
+            <p class="stock">Two sizes available for purchase with PayPal or with Debit or Credit Card.<font class="fr">&nbsp;&#92;&nbsp;Deux tailles disponibles &agrave; l'achat avec PayPal ou par carte de d&eacute;bit ou de cr&eacute;dit.</font></p>
 
-            <h5 class="woo-article-title"><font class="title">Satao</font> 12&nbsp;&times;&nbsp;8 <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 10</font></h5>
+            <h5 class="woo-article-title"><font class="overscore">Gicl&eacute;e</font>, 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;po</font> &nbsp; <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;de</font> 10</font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -148,7 +150,7 @@
 
           <div>
 
-            <h5 class="woo-article-title"><font class="title">Satao</font> 18&nbsp;&times;&nbsp;12 <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 10</font></h5>
+            <h5 class="woo-article-title"><font class="overscore">Gicl&eacute;e</font>, 18&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;po</font> &nbsp; <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;de</font> 10</font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -177,9 +179,7 @@
             </form>
 
             <div class="clear paypal-ca">
-              <p class="linebreak small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
-              <p class="linebreak small">Please select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font></p>
-              <p class="linebreak small">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
+              <p class="linebreak small">Shipping within Canada is included. Please select the <u>International</u> option for shipping outside Canada. International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse. Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada. L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
 
             </div>
 
