--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -93,7 +93,6 @@
             <div class="clear-bottom">
               <h5><font class="overscore">Full Color Paperback</font><font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></h5>
               <p>Language:<font class="fr">&nbsp;&#92;&nbsp;Langue&nbsp;:</font> En, Fr</p>
-              <p>Limited edition.<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition limit&eacute;e.</font><!-- ? copies--></p>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">50</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price-us">87</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0101 1511</font></p>
               <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2024</p>
@@ -120,9 +119,9 @@
 
           <div class="clear-bottom">
             <h4 class="in-stock"><font class="clear title">White<font class="letterspace-sp"> </font><font class="thin">Elephant</font></font> <font class="thin">(December<font class="fr">&nbsp;&#92;&nbsp;D&eacute;cembre</font>&nbsp;2024)</font></h4>
-            <h5 class="stock woo-article">Two editions available for pre-order with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Deux &eacute;ditions pr&ecirc;t &agrave; pr&eacute;commander.</font></h5>
+            <p class="stock">Two editions available for pre-order with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Deux &eacute;ditions pr&ecirc;t &agrave; pr&eacute;commander.</font></p>
 
-            <h5 class="woo-article-title"><font class="small"><font class="overscore">E-book</font><font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></font></h5>
+            <h5 class="woo-article-title"><font class="overscore">E-book</font><font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -166,7 +165,7 @@
 
           <div>
 
-            <h5 class="woo-article-title"><font class="small"><font class="overscore">Full Color Paperback</font><font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></font></h5>
+            <h5 class="woo-article-title"><font class="overscore">Full Color Paperback</font><font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
