--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -80,14 +80,14 @@
 
             <div class="clear-bottom">
               <h5>Oil Painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
-              <p>Dimension: 30&nbsp;&times;&nbsp;15 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+              <p>Dimension: 30&nbsp;&times;&nbsp;15 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0200 0011</font></p>
               <p>Show Date:<font class="fr">&nbsp;&#92;&nbsp;Date d'exposition&nbsp;:</font> 12.2022</p>
 
             </div>
 
             <div class="clear-bottom">
-              <h5><font class="overscore">Digital Image</font><font class="fr">&nbsp;&#92;&nbsp;num&eacute;rique</font></h5>
+              <h5><font class="overscore">Digital Edition</font><font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition num&eacute;rique</font></h5>
               <p>Dimension: 3240&nbsp;&times;&nbsp;1620 px</p>
               <div class="small">
                 <p>All included format collections:<font class="fr">&nbsp;&#92;&nbsp;Toutes les collections de formats inclus&nbsp;:</font></p>
@@ -101,10 +101,10 @@
 
             <div class="clear-bottom">
               <h5><font class="overscore">Limited Edition Gicl&eacute;e</font><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-              <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+              <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               <div class="small">
                 <p>Print area within matte:<font class="fr">&nbsp;&#92;&nbsp;Zone d'impression dans le cache&nbsp;:</font></p>
-                <p>10&nbsp;&times;&nbsp;6 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+                <p>10&nbsp;&times;&nbsp;6 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               </div>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">100</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">125</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0201 1111</font></p>
@@ -114,10 +114,10 @@
 
             <div class="clear-bottom">
               <h5><font class="overscore">Limited Edition Gicl&eacute;e</font><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-              <p>Dimension: 20&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+              <p>Dimension: 20&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               <div class="small">
                 <p>Print area within matte:<font class="fr">&nbsp;&#92;&nbsp;Zone d'impression dans le cache&nbsp;:</font></p>
-                <p>18&nbsp;&times;&nbsp;10 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+                <p>18&nbsp;&times;&nbsp;10 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               </div>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">200</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">200</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0201 1121</font></p>
@@ -146,9 +146,9 @@
 
           <div class="clear-bottom">
             <h4 class="in-stock"><font class="title">White<font class="letterspace-sp"> </font><font class="thin">Tiger</font></font> <font class="thin">(December<font class="fr">&nbsp;&#92;&nbsp;D&eacute;cembre</font>&nbsp;2024)</font></h4>
-            <h5 class="stock woo-article">Digital copy and two print sizes available for pre-order with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Copie num&eacute;rique et deux tailles de gicl&eacute;e pr&ecirc;t &agrave; pr&eacute;commander avec PayPal.</font></h5>
+            <p class="stock">Digital copy and two print sizes available for pre-order with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Copie num&eacute;rique et deux tailles de gicl&eacute;e pr&ecirc;t &agrave; pr&eacute;commander avec PayPal.</font></p>
 
-            <h5 class="woo-article-title"><font class="small"><font class="overscore">Digital Copy</font><font class="fr">&nbsp;&#92;&nbsp;Copie num&eacute;rique</font></font></h5>
+            <h5 class="woo-article-title"><font class="overscore">Digital</font><font class="fr">&nbsp;&#92;&nbsp;Copie num&eacute;rique</font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -171,7 +171,7 @@
           </div>
 
           <div class="clear-bottom">
-            <h5 class="woo-article-title"><font class="small"><font class="overscore">Gicl&eacute;e</font>, 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font>, Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 250</font></h5>
+            <h5 class="woo-article-title"><font class="overscore">Gicl&eacute;e</font>, 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;po</font> <font class="small">&middot;&nbsp;Edition of<font class="fr">&nbsp;&#92;&nbsp;de</font> 250</font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -202,7 +202,7 @@
           </div>
 
           <div>
-            <h5 class="woo-article-title"><font class="small"><font class="overscore">Gicl&eacute;e</font>, 20&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font>, Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 25</font></h5>
+            <h5 class="woo-article-title"><font class="overscore">Gicl&eacute;e</font>, 20&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;po</font> <font class="small">&middot;&nbsp;Edition of<font class="fr">&nbsp;&#92;&nbsp;de</font> 25</font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
