--- a/boutique/medium/giclee/kamboyo/index.html
+++ b/boutique/medium/giclee/kamboyo/index.html
@@ -36,8 +36,8 @@
   <header>
 
     <div class="quote text-center">
-      <h1 class="title"><a href="../../../" title="Animat Habitat boutique."><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></a></h1>
-      <h3><a href="../" title="Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es."><font class="overscore">Gicl&eacute;e Prints</font></a><font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font></h3>
+      <h1>Kamboyo</h1>
+      <h3>Gicl&eacute;e, 2018</h5>
     </div>
 
   </header>
@@ -60,23 +60,24 @@
         <div class="clear ptych-center product-summary">
 
           <div>
-            <h2 class="title">Kamboyo</h2>
-            <h5 class="woo-tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em>Last of the Big Tuskers</em>.</h5>
-            <h5 class="author">Digital painting by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Peinture num&eacute;rique par Dane Aleksander.</font></h5>
+            <h5 class="tag">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em class="overscore">Last of the Big Tuskers</em>.</h5>
+            <p>Archival pigment print on acid-free archival paper.<font class="fr">&nbsp;&#92;&nbsp;Tirage pigmentaire d'archivage sur papier d'archivage sans acide.</font></p>
+            <p>Digital painting by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Peinture num&eacute;rique par Dane Aleksander.</font></p>
+            <p>Created in<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au</font> Canada.</p>
 
             <p class="linebreak">&ldquo;Kamboyo&rdquo; is one of a collection of digital paintings painted in the making of <em>Last of the Big Tuskers</em> (documentary film, 2018). This digital painting is printed in limited edition as an archival pigment print on acid-free archival paper, and printed with a half-inch unprinted matte to allow for safe handling as well as for framing options. The archival pigment prints are available in two sizes.<font class="fr">&nbsp;&#92;&nbsp;&laquo;&nbsp;Kamboyo&nbsp;&raquo; fait partie d'une collection de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <em>Last of the Big Tuskers</em>. Cette peinture num&eacute;rique est imprim&eacute; en &eacute;dition limit&eacute;e en tant que tirages pigmentaires d'archives sur papier d'archivage sans acide, et c'est imprim&eacute; avec une mate de demi-pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options de cadrage. Les tirages pigmentaires d'archives sont disponibles en deux tailles.</font></p>
 
             <p class="linebreak">Fifty (50) per cent of the purchase price is directed to wildlife conservation projects associated with scene one at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Cinquante pour cent du prix d'achat est affect&eacute; &agrave; des projets de conservation de la nature en Afrique.</font></p>
           </div>
 
-          <div class="gutter-tobo diptych">
+          <div class="clear diptych">
 
-            <div class="gutter-side">
-              <h5>Limited Edition Gicl&eacute;e<font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-              <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+            <div class="clear-bottom">
+              <h5><font class="">Limited Edition Gicl&eacute;e</font><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+              <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               <div class="small">
                 <p>Print area within matte:<font class="fr">&nbsp;&#92;&nbsp;Zone d'impression dans le cache&nbsp;:</font></p>
-                <p>11&nbsp;&times;&nbsp;7 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+                <p>11&nbsp;&times;&nbsp;7 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               </div>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">100</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">75</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0112 1111</font></p>
@@ -84,12 +85,12 @@
 
             </div>
 
-            <div class="gutter-side">
-              <h5>Limited Edition Gicl&eacute;e<font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-              <p>Dimension: 18&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+            <div class="clear-bottom">
+              <h5><font class="">Limited Edition Gicl&eacute;e</font><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+              <p>Dimension: 18&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               <div class="small">
                 <p>Print area within matte:<font class="fr">&nbsp;&#92;&nbsp;Zone d'impression dans le cache&nbsp;:</font></p>
-                <p>17&nbsp;&times;&nbsp;11 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
+                <p>17&nbsp;&times;&nbsp;11 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
               </div>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">200</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">150</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0112 1121</font></p>
@@ -116,8 +117,8 @@
         <div class="clear ptych-right product-stock">
 
           <div>
-
-            <h5 class="stock woo-article">No longer available in print.<font class="fr">&nbsp;&#92;&nbsp;N.est plus disponible en version imprim&eacute;e.</font></h5>
+            <h4>Kamboyo</h4>
+            <p class="stock">No longer available in print.<font class="fr">&nbsp;&#92;&nbsp;N.est plus disponible en version imprim&eacute;e.</font></p>
 
           </div>
 
