--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -70,9 +70,10 @@
             <p>Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</p>
             <!-- <p>Created in<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au Canada.</font></p> -->
 
-            <p class="linebreak lineend"><em>White Rhino</em> is an oil painting that sets a serene landscape in Tanzania in contrast with an endangerment on the horizon for the northern white rhinoceros. The painting is regarded as a formative study at Animat Habitat where it started a conversation about the role we want to play in shaping the world we want to live in.<font class="fr">&nbsp;&#92;&nbsp;<em>Rhinoc&eacute;ros blanc</em> est une peinture &agrave; l'huile qui fixe un paysage serein en Tanzanie en contraste avec une menace &agrave; l'horizon pour le rhinoc&eacute;ros blanc. La peinture est consid&eacute;r&eacute;e comme l'&eacute;tude formative chez Animat Habitat o&ugrave; elle a commenc&eacute; une conversation sur la fa&ccedil;on dont nous voulons fa&ccedil;onner le monde dans lequel nous voulons vivre.</font></p>
+            <p class="linebreak"><em>White Rhino</em> is an oil painting that sets a serene landscape in Tanzania in contrast with an endangerment on the horizon for the northern white rhinoceros. The painting is regarded as a formative study at Animat Habitat where it started a conversation about the role we want to play in shaping the world we want to live in.<font class="fr">&nbsp;&#92;&nbsp;<em>Rhinoc&eacute;ros blanc</em> est une peinture &agrave; l'huile qui fixe un paysage serein en Tanzanie en contraste avec une menace &agrave; l'horizon pour le rhinoc&eacute;ros blanc. La peinture est consid&eacute;r&eacute;e comme l'&eacute;tude formative chez Animat Habitat o&ugrave; elle a commenc&eacute; une conversation sur la fa&ccedil;on dont nous voulons fa&ccedil;onner le monde dans lequel nous voulons vivre.</font></p>
 
-            <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/39/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Ngorongoro Conservation Area">Ngorongoro Conservation Area</a></h5>
+            <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/39/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Ngorongoro Conservation Area">Ngorongoro Conservation Area</a></h5> -->
+
           </div>
 
           <div class="clear diptych">
@@ -94,7 +95,7 @@
             <div class="preview-thumbnail" id="preview-thumbnail">
               <a onclick="toggle_preview();">
                 <img alt="Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&eacute;ro. White Rhino oil painting. &ndash;&nbsp;peinture &agrave; l'huile. &copy; Dane Aleksander, 2007" class="trim" src="../../inc/img/boutique/00/oafa.0.480-160.jpg" /></a>
-                <p class="text-right"><em>White Rhino</em>, Tanzania<font class="fr">&nbsp;&#92;&nbsp;Tanzanie</font> (oil paint, 2007) &copy; Dane Aleksander</p>
+                <p class="text-right"><em>White Rhino</em>, Ngorongoro Conservation Area, Tanzania<font class="fr">&nbsp;&#92;&nbsp;Tanzanie</font> (oil paint<font class="fr">&nbsp;&#92;&nbsp;peinture &agrave; l'huile</font>, 2007) &copy; Dane Aleksander</p>
             </div>
           </div>
 
