--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -73,9 +73,9 @@
             <p>Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</p>
             <p>Created in<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au</font> Canada.</p>
 
-            <p class="linebreak lineend">Journey with an elephant across a sea of sand: <em>White Elephant</em> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable&nbsp;: <em>&Eacute;l&eacute;phant blanc</em> est un publication num&eacute;rique et une &eacute;dition limit&eacute;e qui prend vie avec l'app qui l'accompagne. Cette publication est la premi&egrave;re d'une s&eacute;rie de projets chez Animat Habitat.</font></p>
+            <p class="linebreak">Journey with an elephant across a sea of sand: <em>White Elephant</em> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable&nbsp;: <em>&Eacute;l&eacute;phant blanc</em> est un publication num&eacute;rique et une &eacute;dition limit&eacute;e qui prend vie avec l'app qui l'accompagne. Cette publication est la premi&egrave;re d'une s&eacute;rie de projets chez Animat Habitat.</font></p>
 
-            <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/1432/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Okavango Delta">Okavango Delta</a></h5>
+            <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/1432/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Okavango Delta">Okavango Delta</a></h5> -->
 
           </div>
 
@@ -109,7 +109,8 @@
             <div class="preview-thumbnail" id="preview-thumbnail">
               <a onclick="toggle_preview();">
                 <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="trim" src="../../inc/img/boutique/01/oafa.1.cover.420-640.jpg" /></a>
-                <p class="text-right"><em>White Elephant</em>, Angola &middot; Botswana &middot; Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font></p>
+                <p class="text-right"><em>White Elephant</em>, Okavango Delta<font class="fr">&nbsp;&#92;&nbsp;de l'Okavango</font>, Angola &middot; Botswana &middot; Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font></p>
+
             </div>
           </div>
 
@@ -224,6 +225,9 @@
   <section class="single">
     <article>
       <div class="project-broadcast quote">
+
+        <!-- <h3><a href="technology-ar-kit/"><font class="scene-one">Where is Augmented Reality?</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <pre class="thin"></pre> -->
 
         <!-- <h3><a href="making-of-ella-4/"><font class="scene-one">Making of Ella Ch.&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
         <pre class="thin"></pre> -->
