--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -95,7 +95,7 @@
             <div class="preview-thumbnail" id="preview-thumbnail">
               <a onclick="toggle_preview();">
                 <img alt="Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&eacute;ro. White Rhino oil painting. &ndash;&nbsp;peinture &agrave; l'huile. &copy; Dane Aleksander, 2007" class="trim" src="../../inc/img/boutique/00/oafa.0.480-160.jpg" /></a>
-                <p class="text-right"><em>White Rhino</em>, Ngorongoro Conservation Area, Tanzania<font class="fr">&nbsp;&#92;&nbsp;Tanzanie</font> (oil paint<font class="fr">&nbsp;&#92;&nbsp;peinture &agrave; l'huile</font>, 2007) &copy; Dane Aleksander</p>
+                <p class="text-right"><em>White Rhino</em>, Ngorongoro Conservation Area<font class="fr">&nbsp;&#92;&nbsp;Zone de conservation de Ngorongoro</font>, Tanzania<font class="fr">&nbsp;&#92;&nbsp;Tanzanie</font> (oil paint<font class="fr">&nbsp;&#92;&nbsp;peinture &agrave; l'huile</font>, 2007) &copy; Dane Aleksander</p>
             </div>
           </div>
 
