--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -109,7 +109,7 @@
             <div class="preview-thumbnail" id="preview-thumbnail">
               <a onclick="toggle_preview();">
                 <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="trim" src="../../inc/img/boutique/01/oafa.1.cover.420-640.jpg" /></a>
-                <p class="text-right"><em>White Elephant</em>, Kavango basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kavango</font>, Angola &middot; Botswana &middot; Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, 2024)</p>
+                <p class="text-right"><em>White Elephant</em>, Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola &middot; Botswana &middot; Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, 2024)</p>
 
             </div>
           </div>
