--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -318,7 +318,7 @@
         <div>
           <pre class="thin"></pre>
           <p class="scene-one title">January 2019</p>
-          <p><b>Kiasa</b> is particularly fond of the little girl, and when she is not in one of her decidedly naughty moods, she is doing a good job of keeping an eye on the little [Larro]. In the evening, Enkesha, her neighbor, is always pulling her greens over to their partition and trying to share them with Larro as well.</p>
+          <p><font class="color">Keeper&mdash;</font><b>Kiasa</b> is particularly fond of the little girl, and when she is not in one of her decidedly naughty moods, she is doing a good job of keeping an eye on the little [Larro]. In the evening, Enkesha, her neighbor, is always pulling her greens over to their partition and trying to share them with Larro as well.</p>
 
           <p class="linebreak lineend">The two orphans who have not been so welcoming of little Larro are Emoli and Mapia. These two are going through a phase of being rather boisterous and naughty, picking fights with their friends and generally rough-housing with the youngsters throwing their weight around. Neither have been particularly nice to Larro, and <b>Kiasa</b> as well as the other females including Tagwa have to keep an eye out for her. It is not just the females though, gentle older bull Jotto is not a fan of this kind of rough behaviour either, and is very happy to step in and discipline where necessary. Of course the Keepers are ever mindful of this and ensure they are kept firmly in check.</p>
 
